# VertretungsBoy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bot.py  main.cpp  plan.cpp  plan.hpp  plan.py
include/: management.hpp  plan.hpp
src/: management.cpp  plan.cpp
